<resources>
    <string name="app_name">Dryrapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_enter_details">Enter Details</string>
    <string name="menu_driver_details">Driver Details</string>
    <string name="menu_order_overview">Order Overview</string>
    <string name="menu_services">Services</string>
    <string name="menu_send">Send</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="duration">Duration</string>
    <string name="location_car">Locaction and Car Info</string>
    <string name="car_name">Car Name</string>
    <string name="car_number">Car Number</string>
    <string name="car_location">Car Location</string>
    <string name="select_type">Select car Type</string>
    <string name="reserver_driver">Reserve a Driver</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="pick_in">Pick in</string>
    <string name="pick_up">Pick Up</string>
    <string name="time_from">Time From:</string>
    <string name="duration1">Duration:</string>
    <string name="address">Address:</string>
    <string name="vehicle_type">Vehicle Type:</string>
    <string name="date_order">23/1/1233</string>
    <string name="hour">3 Hour</string>
    <string name="ampeert">Ampeert</string>
    <string name="automatic">Atomatic</string>
    <string name="date1">Date:</string>

    <string name="total_price">Total Price</string>
    <string name="submit">Submit</string>
    <string name="personal_hourly">Personal Hourly Driver</string>
    <string name="driver_team_event">Driver Team For Event</string>

    <string name="car_pick_up">Car Pick UP</string>
    <string name="select">Select</string>
    <string name="personal_use">Personal Use</string>
    <string name="for_Bussiness">For Bussiness</string>

    <string name="number">24</string>
    <string name="per_hour">Per Hour</string>

    <string name="to">To</string>
    <string name="from">From</string>
    <string name="current_location">Current Location</string>
    <string name="madhapur">Madhapur,Hyderbad</string>


    <string name="view_more">View More</string>
    <string name="title_activity_maps">Map</string>

    <string-array name="car_type">
        <item>Select car Type</item>
        <item>Automobile</item>
        <item>manual</item>
    </string-array>

</resources>
