<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_enter_details"
            android:title="@string/menu_enter_details" />
        <item
            android:id="@+id/nav_driver_details"
            android:title="@string/menu_driver_details" />
        <item
            android:id="@+id/nav_order_overview"
            android:title="@string/menu_order_overview" />
    </group>
    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_services"
                android:title="@string/menu_services" />
            <item
                android:id="@+id/nav_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
</menu>
