<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="9"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_10ssp"
            android:layout_marginEnd="@dimen/_10ssp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <androidx.cardview.widget.CardView
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_width="match_parent"
                app:cardUseCompatPadding="true"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:paddingStart="@dimen/_10sdp"
                        android:orientation="vertical"
                        android:layout_weight="0.8"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        tools:ignore="RtlSymmetry">
                        <TextView
                            android:layout_marginStart="@dimen/_14sdp"
                            android:id="@+id/name"
                            android:layout_marginTop="@dimen/_10sdp"
                            android:textSize="@dimen/_14sdp"
                            android:textColor="#000"
                            android:text="@string/car_pick_up"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_30sdp">

                            <ImageView
                                android:layout_marginStart="@dimen/_14sdp"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_nigeria1"
                                android:layout_width="@dimen/_15sdp"
                                android:layout_height="@dimen/_20sdp"
                                tools:ignore="ContentDescription" />
                            <LinearLayout
                                android:gravity="center"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:id="@+id/minprice"
                                    android:layout_gravity="center"
                                    android:textSize="@dimen/_15sdp"
                                    android:textColor="#fbac3a"
                                    android:text="@string/number"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    tools:ignore="HardcodedText" />
                            </LinearLayout>
                            <LinearLayout
                                android:layout_marginStart="@dimen/_1sdp"
                                android:layout_marginTop="@dimen/_3sdp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content">
                                <TextView
                                    android:id="@+id/pricetype"
                                    android:layout_marginTop="@dimen/_5sdp"
                                    android:layout_gravity="center"
                                    android:text="@string/per_hour"
                                    android:textSize="@dimen/_10sdp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    tools:ignore="HardcodedText" />
                            </LinearLayout>
                        </LinearLayout>
                        <TextView
                            android:layout_marginStart="@dimen/_14sdp"
                            android:text="@string/view_more"
                            android:textSize="@dimen/_9sdp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_marginTop="@dimen/_10sdp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_weight="0.5"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                        <androidx.cardview.widget.CardView
                            android:layout_marginStart="@dimen/_5sdp"
                            app:cardCornerRadius="@dimen/_360sdp"
                            android:layout_width="@dimen/_50sdp"
                            android:layout_height="@dimen/_50sdp">
                            <ImageView
                                android:id="@+id/img"
                                android:layout_gravity="center"
                                android:src="@drawable/ic_ordercar"
                                android:layout_width="@dimen/_25sdp"
                                android:layout_height="@dimen/_25sdp"
                                tools:ignore="ContentDescription" />
                        </androidx.cardview.widget.CardView>
                        <Button
                            android:id="@+id/selct"
                            android:layout_marginTop="@dimen/_4sdp"
                            android:layout_marginStart="@dimen/_7sdp"
                            android:layout_marginEnd="@dimen/_5sdp"
                            android:background="@drawable/round_button"
                            android:textColor="#fff"
                            android:text="@string/select"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_25sdp"
                            tools:ignore="HardcodedText" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>