<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <fragment
            android:id="@+id/map1"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity" >
        </fragment>
        <LinearLayout
            android:id="@+id/loc"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp">
            <androidx.cardview.widget.CardView
                android:visibility="visible"
                app:cardCornerRadius="@dimen/_5sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_width="match_parent"
                app:cardUseCompatPadding="true"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">
                        <ImageView
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_location1_on_black_24dp"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            tools:ignore="ContentDescription" />
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_marginStart="@dimen/_10sdp"
                                android:text="@string/from"
                                android:textSize="@dimen/_15sdp"
                                android:textColor="#009a43"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <EditText
                                android:layout_marginStart="@dimen/_10sdp"
                                android:hint="@string/current_location"
                                android:textSize="@dimen/_15sdp"
                                android:textColor="#656565"
                                android:background="@null"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:importantForAutofill="no"
                                tools:ignore="TextFields" />
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="0.1"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">
                        <View
                            android:background="#000"
                            android:layout_width="match_parent"
                            android:layout_height="0.3dp"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_weight="0.5"
                        android:layout_width="match_parent"
                        android:layout_height="0dp">
                        <ImageView
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_near_me_black_24dp"
                            android:layout_width="@dimen/_20sdp"
                            android:layout_height="@dimen/_20sdp"
                            tools:ignore="ContentDescription" />
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">
                            <TextView
                                android:layout_marginStart="@dimen/_10sdp"
                                android:text="@string/to"
                                android:textSize="@dimen/_15sdp"
                                android:textColor="#009a43"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>
                            <EditText
                                android:background="@null"
                                android:layout_marginStart="@dimen/_10sdp"
                                android:hint="@string/madhapur"
                                android:textSize="@dimen/_15sdp"
                                android:textColor="#656565"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:importantForAutofill="no" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <ImageView
            android:id="@+id/sreac"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_below="@+id/loc"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/ic_search"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_30sdp"
            tools:ignore="ContentDescription" />
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_marginEnd="@dimen/_15sdp"
            android:src="@drawable/ic_gpsfixedindicator"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_below="@+id/sreac"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_30sdp"
            tools:ignore="ContentDescription,RtlHardcoded" />
        <Button
            android:layout_below="@+id/map1"
            android:background="@drawable/round_button"
            android:text="@string/submit"
            android:id="@+id/sub"
            android:layout_marginTop="-70dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>