<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    >


    <LinearLayout

        android:layout_marginStart="@dimen/_15sdp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/download"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                tools:ignore="ContentDescription" />



        </LinearLayout>
        <LinearLayout

            android:orientation="vertical"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textSize="@dimen/_15sdp"
                android:textColor="#000"

                android:layout_marginTop="@dimen/_20sdp"

                android:text="Vinay kishore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText" />
            <TextView
                android:textSize="@dimen/_12sdp"
                android:textColor="#000"
                android:layout_marginTop="@dimen/_5sdp"

                android:text="9849469368"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText" />


        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:background="@drawable/round_button"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_30sdp"
                android:baselineAligned="false"
                tools:ignore="UselessParent">
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="0.1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/ic_call_black_24dp"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        tools:ignore="ContentDescription" />



                </LinearLayout>
                <LinearLayout

                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:textColor="#fff"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_gravity="center"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/call"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>



                </LinearLayout>





            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <LinearLayout
                android:background="@drawable/button_round"
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_30sdp"
                android:baselineAligned="false"
                tools:ignore="UselessParent">
                <LinearLayout
                    android:gravity="center"
                    android:layout_weight="0.1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <ImageView
                        android:layout_gravity="center"
                        android:src="@drawable/ic_message_black_24dp"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        tools:ignore="ContentDescription" />



                </LinearLayout>
                <LinearLayout

                    android:layout_weight="0.2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent">
                    <TextView
                        android:textColor="#fff"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_gravity="center"
                        android:textSize="@dimen/_12sdp"
                        android:text="@string/message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>



                </LinearLayout>





            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:baselineAligned="false">
        <LinearLayout
            android:gravity="center"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/ic_location_on_black_24dp"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                tools:ignore="ContentDescription" />


        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textColor="#26A734"
                android:text="@string/pick_in"
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText" />
            <TextView
                android:textColor="#000"
                android:text="Madhapur metro station"
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText" />



        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:baselineAligned="false">
        <LinearLayout
            android:gravity="center"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/ic_location_on_black_24dp"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                tools:ignore="ContentDescription" />


        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textColor="#26A734"
                android:text="@string/pick_up"
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText" />
            <TextView
                android:textColor="#000"
                android:text="amerpeta metro station"
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText" />



        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:baselineAligned="false">
        <LinearLayout
            android:gravity="center"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <ImageView
                android:src="@drawable/ic_clanderclok"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                tools:ignore="ContentDescription" />


        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textColor="#26A734"
                android:text="@string/date"
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText" />
            <TextView
                android:textColor="#000"
                android:text="23/9/1998,7:0pm"
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText" />



        </LinearLayout>



    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.1"
            android:gravity="center">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:src="@drawable/ic_nigeria_naira_currency_symbol"
                tools:ignore="ContentDescription" />


        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="0.2"
            android:layout_width="0dp"
            android:layout_height="match_parent">
            <TextView
                android:textColor="#26A734"
                android:text="70"
                android:textSize="@dimen/_12sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:ignore="UselessLeaf" />



    </LinearLayout>




</LinearLayout>